Fix columns to display more logically and easily readably

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,6 +45,10 @@ body {
   );
 }
 
+.orphansCustom {
+  orphans: 3;
+}
+
 
 /* // #region scrollbar
 */
